--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <title>LightSwap.Exchange</title>
   </head>
   <body>
+    <div class="ocean">
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
     <div id="root"></div>
   </body>
 </html>
