--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <div class="ocean">
       <div class="wave"></div>
       <div class="wave"></div>
+      <div class="wave"></div>
     </div>
     <div id="root"></div>
   </body>
